--- a/files/GameScreen.fxml
+++ b/files/GameScreen.fxml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -9,28 +12,45 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#keyPressed" prefHeight="516.0" prefWidth="438.0" styleClass="background" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Controller">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="450.0" minWidth="320.0" onKeyPressed="#keyPressed" prefHeight="570.0" prefWidth="400.0" styleClass="background" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Controller">
     <top>
-        <Label text="2048" BorderPane.alignment="CENTER" />
+        <Label text="2048" textFill="#5e5757" BorderPane.alignment="CENTER">
+            <font>
+                <Font name="System Bold" size="32.0" />
+            </font>
+        </Label>
     </top>
     <center>
-        <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
-            <AnchorPane prefHeight="170.0" prefWidth="438.0">
-                <Button fx:id="restartButton" layoutY="173.0" mnemonicParsing="false" onAction="#startButtonClicked" text="Start Game" />
-                <Label fx:id="scores" layoutX="333.0" layoutY="91.0" prefHeight="18.0" prefWidth="90.0" text="Score:" />
-                <Label layoutX="333.0" layoutY="150.0" prefHeight="18.0" prefWidth="90.0" text="Record:" />
+        <VBox prefHeight="458.0" prefWidth="380.0" BorderPane.alignment="CENTER">
+            <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="400.0">
+                <Button fx:id="restartButton" layoutX="55.0" layoutY="83.0" mnemonicParsing="false" onAction="#startButtonClicked" prefHeight="42.0" prefWidth="124.0" style="-fx-background-color: orange;" styleClass="startButton" text="START THE GAME" textFill="#eae7e7" wrapText="true">
+                    <font>
+                        <Font name="Calibri Bold" size="14.0" />
+                    </font>
+                </Button>
+                <Label fx:id="scores" alignment="TOP_LEFT" contentDisplay="TOP" graphicTextGap="10.0" layoutX="213.0" layoutY="36.0" prefHeight="27.0" prefWidth="146.0" styleClass="infoLabel" text="Scores:">
+                    <font>
+                        <Font name="Arial Black" size="18.0" />
+                    </font>
+                </Label>
+                <Label layoutX="213.0" layoutY="90.0" prefHeight="27.0" prefWidth="145.0" styleClass="infoLabel" text="Record:">
+                    <font>
+                        <Font name="Arial Black" size="18.0" />
+                    </font>
+                </Label>
             </AnchorPane>
             <StackPane prefHeight="150.0" prefWidth="200.0">
-                <!--<ImageView fitHeight="292.0" fitWidth="280.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView fitHeight="300.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true">
                     <Image url="@field.png" />
-                </ImageView>-->
-                <GridPane fx:id="gridPane" alignment="CENTER" gridLinesVisible="true" prefHeight="280.0" prefWidth="300.0">
+                </ImageView>
+                <GridPane fx:id="gridPane" alignment="CENTER" gridLinesVisible="true" hgap="7.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" vgap="7.0">
                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="NEVER" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="NEVER" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="NEVER" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="NEVER" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -38,8 +58,17 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
+                    <padding>
+                        <Insets bottom="9.0" left="60.0" right="58.0" top="10.0" />
+                    </padding>
+                    <opaqueInsets>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                    </opaqueInsets>
                 </GridPane>
             </StackPane>
         </VBox>
     </center>
+    <padding>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+    </padding>
 </BorderPane>
