--- a/files/styles.css
+++ b/files/styles.css
@@ -1,11 +1,82 @@
 .background {
-    -fx-background-color: linen;
+    -fx-background-color: rgba(255, 239, 213, 0.5);
+}
+
+.title {
+    -fx-font-size: 32;
+    -fx-font-family: "Arial";
+    -fx-font-weight: bold;
+    -fx-text-fill: #5e5757;
 }
 
 .infoLabel {
     -fx-background-color: lightgrey;
+    -fx-background-radius: 5;
+    -fx-padding: 5 7 5 7;
+    -fx-pref-width: 150px;
+    -fx-pref-height: 30px;
+    -fx-alignment: center-left;
+    -fx-font-size: 18px;
+    -fx-font-family: "Arial Black";
+    -fx-font-weight: bold;
+    -fx-text-fill: #5e5757;
+}
+
+.startButton {
+    -fx-background-radius: 8;
+    -fx-font-size: 18px;
+    -fx-font-family: "Calibri";
+    -fx-font-weight: bold;
+    -fx-text-fill: eae7e7;
+    -fx-background-color: orange;
 }
 
 .chip {
-    -fx-background-color: lightgrey;
+    -fx-background-radius: 5;
+    -fx-font-family: "Calibri";
+    -fx-font-weight: bold;
+    -fx-font-size: 24px;
+    -fx-alignment: center;
+}
+.chip2 {
+    -fx-background-color: eee4da;
+}
+.chip4 {
+    -fx-background-color: ede0c8;
+}
+.chip8 {
+    -fx-background-color: f2b179;
+    -fx-text-fill: white;
+}
+.chip16 {
+    -fx-background-color: f59762;
+        -fx-text-fill: white;
+}
+.chip32 {
+    -fx-background-color: f67c5f;
+    -fx-text-fill: white;
+}
+.chip64 {
+    -fx-background-color: f65e3b;
+    -fx-text-fill: white;
+}
+.chip128 {
+    -fx-background-color: edcf72;
+    -fx-text-fill: white;
+}
+.chip256 {
+    -fx-background-color: eccb60;
+    -fx-text-fill: white;
+}
+.chip512 {
+    -fx-background-color: edc850;
+    -fx-text-fill: white;
+}
+.chip1024 {
+    -fx-background-color: edc642;
+    -fx-text-fill: white;
+}
+.chip2048 {
+    -fx-background-color: edc22e;
+    -fx-text-fill: white;
 }
