--- a/files/StartScreen.fxml
+++ b/files/StartScreen.fxml
@@ -10,7 +10,7 @@
 <BorderPane styleClass="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="477.0"
             prefWidth="351.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/16"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="Controller.Controller">
+            fx:controller="View.FXController">
     <center>
         <VBox alignment="TOP_CENTER" prefHeight="460.0" prefWidth="263.0" BorderPane.alignment="CENTER">
             <ImageView fitHeight="223.0" fitWidth="216.0" pickOnBounds="true" preserveRatio="true">
