--- a/files/GameScreen.fxml
+++ b/files/GameScreen.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -13,56 +12,42 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="450.0" minWidth="320.0"
-            prefHeight="570.0" prefWidth="400.0" styleClass="background" stylesheets="@styles.css"
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" styleClass="background" stylesheets="@styles.css"
             xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="View.FXController" onKeyReleased="#keyReleased">
     <top>
-        <Label styleClass="title" text="2048" BorderPane.alignment="CENTER">
-        </Label>
+        <Label styleClass="title" text="2048" BorderPane.alignment="CENTER"/>
     </top>
     <center>
         <VBox prefHeight="458.0" prefWidth="380.0" BorderPane.alignment="CENTER">
-            <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-                        prefHeight="150.0" prefWidth="400.0">
-                <Button fx:id="restartButton" layoutX="55.0" layoutY="83.0" mnemonicParsing="false"
-                        onAction="#startButtonClicked" prefHeight="42.0" prefWidth="124.0" styleClass="startButton"
-                        text="START GAME">
+            <AnchorPane prefHeight="150.0" prefWidth="400.0">
+                <Button fx:id="restartButton" styleClass="startButton" layoutX="55.0" layoutY="83.0"
+                        onAction="#startButtonClicked"  text="START GAME">
                 </Button>
-                <Label fx:id="scores" layoutX="213.0" layoutY="36.0" styleClass="infoLabel" text="Scores:">
+                <Label fx:id="scores" styleClass="infoLabel" layoutX="213.0" layoutY="36.0" text="Scores:">
                 </Label>
-                <Label layoutX="213.0" layoutY="90.0" styleClass="infoLabel" text="Record:">
+                <Label styleClass="infoLabel" layoutX="213.0" layoutY="90.0" text="Record:">
                 </Label>
             </AnchorPane>
-            <StackPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="300.0" prefWidth="400.0">
+            <StackPane prefHeight="300.0" prefWidth="400.0">
                 <ImageView fitHeight="300.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true">
                     <Image url="@field.png"/>
                 </ImageView>
-                <GridPane fx:id="gridPane" alignment="CENTER" hgap="7.0" maxHeight="-Infinity" maxWidth="-Infinity"
-                          minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" vgap="7.0">
+                <GridPane fx:id="gridPane" styleClass="gridPane" alignment="CENTER">
                     <columnConstraints>
-                        <ColumnConstraints hgrow="NEVER" minWidth="10.0" prefWidth="100.0"/>
-                        <ColumnConstraints hgrow="NEVER" minWidth="10.0" prefWidth="100.0"/>
-                        <ColumnConstraints hgrow="NEVER" minWidth="10.0" prefWidth="100.0"/>
-                        <ColumnConstraints hgrow="NEVER" minWidth="10.0" prefWidth="100.0"/>
+                        <ColumnConstraints prefWidth="65"/>
+                        <ColumnConstraints prefWidth="65"/>
+                        <ColumnConstraints prefWidth="65"/>
+                        <ColumnConstraints prefWidth="65.0"/>
                     </columnConstraints>
                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints prefHeight="65.0"/>
+                        <RowConstraints prefHeight="65.0"/>
+                        <RowConstraints prefHeight="65.0"/>
+                        <RowConstraints prefHeight="65.0"/>
                     </rowConstraints>
-                    <padding>
-                        <Insets bottom="9.0" left="60.0" right="58.0" top="10.0"/>
-                    </padding>
-                    <opaqueInsets>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
-                    </opaqueInsets>
                 </GridPane>
             </StackPane>
         </VBox>
     </center>
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
 </BorderPane>
