--- a/files/styles.css
+++ b/files/styles.css
@@ -7,6 +7,21 @@
     -fx-padding: 20 20 20 20;
 }
 
+.vbox {
+    -fx-pref-width: 400px;
+    -fx-pref-height: 458px;
+}
+
+.anchorPane {
+    -fx-pref-width: 400px;
+    -fx-pref-height: 150px;
+}
+
+.stockPane {
+    -fx-pref-width: 400px;
+    -fx-pref-height: 300px;
+}
+
 .title {
     -fx-font-size: 32;
     -fx-font-family: "Arial";
