--- a/files/styles.css
+++ b/files/styles.css
@@ -4,7 +4,7 @@
     -fx-pref-height: 570px;
     -fx-min-width: 320px;
     -fx-min-height: 450px;
-    -fx-padding: 20 20 20 20;
+    -fx-padding: 15 0 15 0;
 }
 
 .vbox {
@@ -15,6 +15,9 @@
 .anchorPane {
     -fx-pref-width: 400px;
     -fx-pref-height: 150px;
+    -fx-padding: 0 50 0 50;
+    -fx-max-width: 400px;
+    -fx-max-height: 150px;
 }
 
 .stockPane {
