Добавлена кнопка "Назад"

--- a/files/GameScreen.fxml
+++ b/files/GameScreen.fxml
@@ -25,12 +25,11 @@
                 <Button fx:id="restartButton" onAction="#startButtonClicked" styleClass="startButton" text="START GAME"
                         AnchorPane.bottomAnchor="15" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="85">
                 </Button>
-                <Label fx:id="scores" styleClass="infoLabel" text="Scores:" AnchorPane.rightAnchor="0.0"
-                       AnchorPane.topAnchor="32.0">
+                <Label fx:id="scores" styleClass="infoLabel" text="Scores:"
+                       AnchorPane.rightAnchor="0" AnchorPane.topAnchor="32">
                 </Label>
-                <Label styleClass="infoLabel" text="Record:" AnchorPane.bottomAnchor="23.6"
-                       AnchorPane.rightAnchor="0.0">
-                </Label>
+                <Button fx:id="backButton" styleClass="startButton" text="BACK" onAction="#backButtonClicked"
+                        AnchorPane.bottomAnchor="15" AnchorPane.rightAnchor="0"/>
             </AnchorPane>
             <StackPane styleClass="stackPane">
                 <ImageView fitHeight="300.0" fitWidth="300.0">
@@ -50,7 +49,7 @@
                         <RowConstraints prefHeight="65.0"/>
                     </rowConstraints>
                 </GridPane>
-                <Rectangle fx:id="rectangle" fill="WHITE" height="300.0" opacity="0.66" width="300.0" visible="false"/>
+                <Rectangle fx:id="rectangle" fill="WHITE" height="300.0" opacity="0.66" visible="false" width="300.0"/>
                 <Label fx:id="gameOver" styleClass="gameOver" text="Game Over" visible="false"/>
             </StackPane>
         </VBox>
